@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -72,6 +71,6 @@ public class CustomerMapper {
     }
 
     public List<CustomerDto> toDtoList(List<Customer> customers) {
-        return customers.stream().map(this::toDto).collect(Collectors.toList());
+        return customers.stream().map(this::toDto).toList();
     }
 }
